[package]
name = "rust-secure-logger"
version = "0.1.0"
edition = "2021"
authors = ["Tony Chuks Awunor <your-email@example.com>"]
description = "Memory-safe security logging for financial systems and critical infrastructure"
license = "MIT"
repository = "https://github.com/guardsarm/rust-secure-logger"
keywords = ["security", "logging", "audit", "financial", "memory-safe"]
categories = ["development-tools::debugging", "cryptography"]

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "audit_trail"
path = "examples/audit_trail.rs"
